--- a/menu_JS/3.JS进阶/d3_JavaScript进阶第三天/07-作业/作业.md
+++ b/menu_JS/3.JS进阶/d3_JavaScript进阶第三天/07-作业/作业.md
@@ -1,5 +1,7 @@
 # js进阶第三天作业
-
+## 原型链图片
+![alt text](image-1.png)
+![alt text](image.png)
 ## 客观题
 
 1.下面关于编程思想说法错误的是? (D)
@@ -44,7 +46,7 @@
 
 5.关于构造函数和原型对象里面this指向说法正确的是? (A)
 
- A：构造函数和原型对象中的this 都指向 实例化的对象
+ <!--! A：构造函数和原型对象中的this 都指向 实例化的对象 -->
 
  B：构造函数的this指向window
 
